# video_effect

./: .gitignore  meson.build
include/: api.h  config.h  fbo.h  gui.h  player.h  sdl_gl.h  shader.h  shuffler.h  texture.h  uniform.h  util.h  vbo.h
include/glad/: glad.h
shaders/: frag.glsl  input.glsl  mouse.glsl  noise.glsl  simplex.glsl  vert.glsl  voronoi.glsl  voronoise.glsl
src/: api.cpp  config.cpp  config.json  fbo.c  fbo.cpp  glad.c  gui.cpp  main.c  main.cpp  player.c  player.cpp  screen_quad.c  shader.c  shader.cpp  shuffler.cpp  texture.c  texture.cpp  util.cpp  vbo.c  vbo.cpp
